# Generated-Controller-ROS-2

./: compare_data liss.ipynb  compare_data.ipynb  diff.aux  diff.fdb_latexmk  diff.fls  diff.tex  faultless_fo8_adhoc_rvolmea.csv  out  piddob_impulse.csv  piddob_traj_robust.csv  plot_z.py  rvolmea_traj_1.csv  show_ser ver_traj.ipynb  show_traj.py  traj_pid_3.csv
Generating_a_Control_System/: main.aux  main.bbl  main.bib  main.blg  main.fdb_latexmk  main.fls  main.tex
Generating_a_Control_System/chapters/: conclusion.tex  framework.tex  introduction.tex  related_papers.tex
deployment_code/: investigate_rvolmea.py  res.csv  rvolmea.csv  rvolmea_impulse.csv  show_traj.ipynb
deployment_code/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
deployment_code/lissajous_data_sitl/lqr/: 1.csv  2.csv  3.csv  4.csv  6.csv  9.csv
deployment_code/lissajous_data_sitl/piddob/: 1.csv  10.csv  4.csv  7.csv  9.csv
deployment_code/lissajous_data_sitl/rvolmea/: 2.csv  4.csv  6.csv  9.csv
deployment_code/lissajous_real_data/lqr/: lissa_lqr_3.csv  lissa_lqr_4.csv
deployment_code/lissajous_real_data/piddob/: lissa_pid_1.csv  lissa_pid_3.csv
deployment_code/lissajous_real_data/rvolmea/: lissa_rvolmea_1.csv  lissa_rvolmea_2.csv  lissa_rvolmea_4.csv  lissa_rvolmea_5.csv
deployment_code/log/: latest_build
deployment_code/new_data/lqr/: 10.csv  2.csv  3.csv  5.csv  6.csv  9.csv
deployment_code/new_data/piddob/: 10.csv  3.csv  7.csv
deployment_code/new_data/reports_compare/20251022_141618/: summary.aux  summary.fls  summary.out  (+1 more)
deployment_code/new_data/rvolmea/: 10.csv  2.csv  3.csv  8.csv  9.csv
deployment_code/real_data/pid/: traj_pid_1.csv  traj_pid_2.csv  traj_pid_4.csv
deployment_code/src/ai_motor_controller/: pid_params.yaml
deployment_code/takeoff_logs/: lqr_1.csv
install/: setup.bash
lissajous_data_sitl/lqr/: 10.csv  5.csv  7.csv  8.csv
lissajous_data_sitl/piddob/: 2.csv  3.csv  5.csv  6.csv  8.csv
lissajous_data_sitl/rvolmea/: 1.csv  10.csv  3.csv  5.csv  7.csv  8.csv
lissajous_real_data/lqr/: lissa_lqr_1.csv  lissa_lqr_2.csv  lissa_lqr_5.csv
lissajous_real_data/piddob/: lissa_pid_2.csv  lissa_pid_4.csv  lissa_pid_5.csv
lissajous_real_data/rvolmea/: lissa_rvolmea_3.csv
main/: main.aux  main.bib  main.fdb_latexmk  main.fls  main.out  main.tex
main/chapters/: conclusion.tex  framework.tex  introduction.tex  related_papers.tex
new_data/lqr/: 1.csv  4.csv  7.csv  8.csv
new_data/piddob/: 1.csv  2.csv  4.csv  5.csv  6.csv  8.csv  9.csv
new_data/reports_compare/20251022_141618/: comparison_summary.md  summary.fdb_latexmk
new_data/rvolmea/: 1.csv  4.csv  5.csv  6.csv  7.csv
real_data/: analysis.ipynb
real_data/lqr/: traj_lqr_2.csv  traj_lqr_3.csv  traj_lqr_4.csv  traj_lqr_5.csv
real_data/pid/: traj_pid_5.csv
real_data/rvolmea/: traj_rvolmea_2.csv  traj_rvolmea_3.csv
src/ai_motor_controller/: CMakeLists.txt  lemniscate.drone  lissajous.drone  package.xml
src/ai_motor_controller/include/: gazebo_ai.h
src/ai_motor_controller/launch/: lemniscate_launch.py
src/ai_motor_controller/src/: fit_linear_data.ipynb  lemniscate.cpp  test.py
takeoff_logs/: piddob_1.csv  rise_and_settling_time.py  rvolmea_1.csv
(+23 files in other folders)
