<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ai_motor_controller</name>
  <version>0.0.1</version>
  <description>AI Motor Controller for PX4 based quadcopters.</description>
  <maintainer email="C.Carr@lboro.ac.uk">Christopher Carr</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>
  <build_depend>eigen</build_depend>
  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>
  <depend>px4_ros_com</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>


  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>
  <build_export_depend>eigen</build_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
